# plants

./: .gitignore  CONTRIBUTORS.md  README.md
.github/workflows/: build-and-test-multiple-python.yml  build-and-test.yml  build-test-react.yml  build-test-w-poetry.yml  deploy_api.yml  python-package.yml
api/: constants.py  dependencies.py  main.py  requirements.txt
api/routers/: auth.py  new_images.py  new_plants.py  new_source_links.py  plants.py
api/tests/: lib.py  test_auth.py  test_plants.py
api/utils/: aws.py  db.py  s3.py  schema.py
backend/: README.md  dependencies.py  lambda_function.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/plant_api/: constants.py  dependencies.py  main.py  schema.py
backend/plant_api/routers/: auth.py  common.py  images.py  lineages.py  new_images.py  new_plants.py  new_source_links.py  plants.py  source_links.py  testing.py  users.py
backend/plant_api/utils/: db.py  deployment.py  s3.py  schema.py  secrets.py
backend/routers/: auth.py  plants.py
backend/tests/: conftest.py  lib.py  test_auth.py  test_images.py  test_lineages.py  test_plants.py  test_users.py
backend/utils/: auth.py  constants.py  db.py  dynamodb.py  s3.py  schema.py
frontend/: index.html
plant-app/: amplify.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
plant-app/public/: index.html  manifest.json
plant-app/src/: AlertComponents.tsx  App.js  App.tsx  AppNavbar.tsx  Authenticator.tsx  (+15 more)
scratch/: db_manipulations.py  import_plant_sheet.py  scripts.sh
templates/: plant.html
tests/: test_auth.py
(+64 files in other folders)
